# TinyOrmQtDemo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
resources/: resources.qrc
resources/styles/: darkstyle.qss
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/Models/: Order.h  OrderProduct.h  Product.h  User.h
